# raff

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  coupling.html  dist-workspace.toml  justfile  package.json  pnpm-lock.yaml  statements.html  volatility.html
.github/workflows/: release-plz.yml  release.yml
.husky/: commit-msg  pre-commit
.raff/: raff.toml
examples/: all_rules_example.rs  contributor_report_example.rs  coupling_example.rs  custom_rule_example.rs  rust_code_analysis_example.rs  statement_count_example.rs  volatility_example.rs
packaging/: raff.rb
rust_code_analysis_wrapper/: Cargo.toml
rust_code_analysis_wrapper/src/: main.rs
scripts/: e2e.sh
src/: all_rules.rs  cache.rs  ci_report.rs  cli.rs  cli_report.rs  config.rs  config_hierarchy.rs  contributor_report.rs  counter.rs  coupling_rule.rs  error.rs  file_utils.rs  git_utils.rs  html_utils.rs  lib.rs  main.rs  reporting.rs  rule.rs  rust_code_analysis_rule.rs  statement_count_rule.rs  styles.css  table_sorter.js  table_utils.rs  volatility_rule.rs
tests/: ci_junit_golden.rs  ci_sarif_golden.rs  cli_output_golden.rs  config_hierarchy_integration.rs  config_hierarchy_snapshots.rs  config_merge_proptest.proptest-regressions  config_merge_proptest.rs
tests/snapshots/: ci_junit_golden__junit_all_severity_levels.snap  ci_junit_golden__junit_custom_suite_name.snap  ci_junit_golden__junit_empty.snap  ci_junit_golden__junit_finding_with_line_range.snap  ci_junit_golden__junit_finding_with_special_characters.snap  ci_junit_golden__junit_finding_with_xml_special_characters.snap  ci_junit_golden__junit_finding_without_fingerprint.snap  ci_junit_golden__junit_long_message_truncation.snap  ci_junit_golden__junit_multiple_findings_different_rules.snap  ci_junit_golden__junit_multiple_findings_same_rule.snap  ci_junit_golden__junit_note_finding.snap  ci_junit_golden__junit_single_error_finding.snap  ci_junit_golden__junit_warning_finding.snap  ci_sarif_golden__sarif_all_severity_levels.snap  ci_sarif_golden__sarif_empty.snap  ci_sarif_golden__sarif_finding_with_line_range.snap  ci_sarif_golden__sarif_finding_with_special_characters.snap  ci_sarif_golden__sarif_finding_without_fingerprint.snap  ci_sarif_golden__sarif_multiple_findings_different_rules.snap  ci_sarif_golden__sarif_multiple_findings_same_rule.snap  ci_sarif_golden__sarif_note_finding.snap  ci_sarif_golden__sarif_single_error_finding.snap  ci_sarif_golden__sarif_warning_finding.snap  cli_output_golden__cli_all_severity_levels.snap  cli_output_golden__cli_empty.snap  cli_output_golden__cli_finding_with_line_range.snap  cli_output_golden__cli_finding_without_help_uri.snap  cli_output_golden__cli_finding_without_location.snap  cli_output_golden__cli_long_message_truncation.snap  cli_output_golden__cli_multiple_findings_different_rules.snap  cli_output_golden__cli_multiple_findings_same_rule.snap  cli_output_golden__cli_note_finding.snap  cli_output_golden__cli_single_error_finding.snap  cli_output_golden__cli_summary_counts.snap  cli_output_golden__cli_warning_finding.snap  config_hierarchy_snapshots__snapshot_cli_explicit_path_override.snap  config_hierarchy_snapshots__snapshot_default_config_when_no_user_or_repo_config.snap  config_hierarchy_snapshots__snapshot_full_hierarchy_loading.snap  config_hierarchy_snapshots__snapshot_partial_hierarchy_user_and_repo_with_possible_traditional.snap
