[package]
name = "rust-aff"
description = "Rust Architecture Fitness Functions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "~2.5.0"
syn = { version = "~2.0", features = ["full", "visit"] }
prettytable-rs = "0.10.0"
anyhow = "1.0"
git2 = "0.18"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_yaml = "0.9"
