[package]
name = "raff-cli"
description = "Rust Architecture Fitness Functions"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/liamwh/raff"

[[bin]]
name = "raff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "~2.5.0"
syn = { version = "~2.0", features = ["full", "visit"] }
prettytable-rs = "0.10.0"
anyhow = "1.0"
git2 = "0.18"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_yaml = "0.9"
num_cpus = "1.16.0"
color-eyre = "0.6.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
maud = "~0.27"
csv = "~1.3.1"

[package.metadata.release]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
