[package]
name = "raff-cli"
description = "Rust Architecture Fitness Functions"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/liamwh/raff"

[lib]
name = "raff_core"
path = "src/lib.rs"

[[bin]]
name = "raff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "~2.5.0"
syn = { version = "~2.0", features = ["full", "visit"] }
prettytable-rs = "0.10.0"
anyhow = "1.0"
git2 = "0.18"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_yaml = "0.9"
num_cpus = "1.16.0"
color-eyre = "0.6.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
maud = "~0.27"
csv = "~1.3.1"
bincode = "1.3"
sha2 = "0.10"
quick-junit = "0.5"
sarif_rust = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
cargo-dist-version = "0.12.0"
installers = ["shell", "powershell", "homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
ci = ["github"]

[dev-dependencies]
tempfile = "3.3"
proptest = "1.4"
insta = "1.34"
serial_test = "3.0"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 1 }
dead_code = { level = "allow", priority = 3 }

[workspace.lints.clippy]
wildcard_imports = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
significant-drop-tightening = { level = "allow", priority = 2 }
match_bool = { level = "allow", priority = 2 }

# Lint groups
correctness = { level = "deny", priority = 1 }
perf = { level = "warn", priority = 1 }
style = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
suspicious = { level = "warn", priority = 1 }

# Allow nursery & pedantic lints
pedantic = { level = "allow", priority = 3 }
nursery = { level = "allow", priority = 3 }
